integration_tests/codegen_fail/fail/interface/struct/derive_fields_duplicate.rs
use juniper::GraphQLInterface;

#[derive(GraphQLInterface)]
struct Character {
    id: String,

    #[graphql(name = "id")]
    id2: String,
}

fn main() {}
